[package]
name = "muren"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "unicode", "derive"] }
colored = "2.1.0"
glob = "0.3.1"
regex = "1.10.4"
unidecode = "0.3.0"
