[package]
name = "muren"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Jan Pipek <jan.pipek@gmail.com"]
readme = "README.md"
description = "Command-line utility for filename manipulations."
homepage = "https://github.com/janpipek/muren"
keywords = ["cli", "rename", "path"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "unicode", "derive"] }
colored = "2.1.0"
glob = "0.3.1"
regex = "1.10.4"
unidecode = "0.3.0"
